feat: AI 추천 로직 정확도 및 유지보수성 개선
- 견종 분기 로직을 finalBreedToUse 기준으로 수정하여 정확도 향상
  - Vision API 결과와 사용자 선택을 모두 고려하여 분기하도록 개선
  - 견종 확정 시 견종 기반 추천, 미확정 시 라벨 기반 추천으로 로직 보완

- GPT 응답 스파 이름 정규화 로직을 헬퍼 메서드로 분리
  - normalizeSpaName() 메서드 도입으로 스파 슬러그 검색 코드 가독성 및 재사용성 증대
  - 정규식을 활용해 GPT 응답의 불필요한 마크다운, 이모지, 문구 등을 제거하여 DB 검색 정확도 개선